--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.Boyce</groupId>
+	<groupId>com.boyce</groupId>
 	<artifactId>CrudTemplate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CrudTemplate</name>
