--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ˝æ›ø‚≈‰÷√
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.31.136:3306/liuyi?characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=liuyi123
+spring.datasource.url=jdbc:mysql://ip:port/database?characterEncoding=utf-8
+spring.datasource.username=username
+spring.datasource.password=password
