--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,10 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.boyce</groupId>
+	<groupId>com.github.Boyceee</groupId>
 	<artifactId>CrudTemplate</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>CrudTemplate</name>
 	<description>You can create a CRUD interface by this without writing any code but a POJO and a path.</description>
 
